[tool.poetry]
name = "wordle"
version = "0.1.0"
description = ""
authors = ["Myles Thomas <mylescgthomas@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
